// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders the controls 1`] = `
<button
  class="toggle-btn"
  disabled=""
>
  Lock Gate
</button>
`;

exports[`it renders the controls 2`] = `
<button
  class="toggle-btn"
>
  Close Gate
</button>
`;
